Split RateAggregator into type specific classes